fix(frontend): Removed dark mode

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,13 +1,13 @@
 #root {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
 }
 
 .logo {
-  height: 6em;
-  padding: 1.5em;
+  padding-right: 1.5em;
+  padding-left: 1.5em;
+  padding-bottom: 1.5rem;
   will-change: filter;
   transition: filter 300ms;
 }
